lib/testdata/01_package_keyword.ogo
// ERROR "unexpected keyword 'package'"
package main

import "p2"

func main() {
	p2.PinHigh(1)
}
